<package>
 <name>ras_lab1_launch</name>
  <version>0.1.0</version>
  <description>
    Launch files for RAS lab1.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ras_lab1_launch</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>ras_lab1_distance_sensor</run_depend>
  <run_depend>ras_lab1_motors</run_depend>
  <run_depend>ras_lab1_world</run_depend>

</package>
